# html2feed

./: .gitignore  Makefile  package-lock.json  package.json  pyproject.toml  serverless.yml
.devcontainer/: Dockerfile  devcontainer.json
scripts/: create-user.sh
src/domains/: cache_provider.py  config_provider.py  feed.py  fetch_provider.py  selector.py
src/handlers/: create_feed.py  feeds_by_id.py  feeds_by_query_params.py
src/providers/cache/: dynamodb.py
src/providers/config/: dynamodb.py
src/providers/fetch/: requests.py  urlopen.py
src/usecases/: html2feed.py
