[tool.poetry]
name = "html2feed"
version = "0.1.0"
description = ""
authors = ["cm-kojimat <kojima.takashi@classmethod.jp>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.11.1"
lxml = "^4.9.1"
feedgen = "^0.9.0"
aws-lambda-powertools = "^1.27.0"
aws-xray-sdk = "^2.10.0"
boto3-stubs = {extras = ["essential"], version = "^1.24.59"}
requests = "^2.28.1"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pylint = "^2.14.5"
pyright = "^1.1.268"
types-beautifulsoup4 = "^4.11.5"
boto3 = "^1.24.58"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pylint."messages control"]
disable = [
  "unused-argument",
  "missing-class-docstring",
  "missing-function-docstring",
  "missing-module-docstring",
  "too-few-public-methods",

  "raw-checker-failed",
  "bad-inline-option",
  "locally-disabled",
  "file-ignored",
  "suppressed-message",
  "useless-suppression",
  "deprecated-pragma",
  "use-symbolic-message-instead"
]
